--- a/Code/gt_backend/package.json
+++ b/Code/gt_backend/package.json
@@ -5,10 +5,17 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "14.15.4"
+  },
   "dependencies": {
+    "axios": "^0.21.1",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "helmet": "^4.4.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
