--- a/Code/gt_backend/package.json
+++ b/Code/gt_backend/package.json
@@ -18,6 +18,7 @@
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.10.0",
