--- a/Code/gt_backend/client/package.json
+++ b/Code/gt_backend/client/package.json
@@ -9,6 +9,7 @@
     "@zoomus/websdk": "^1.9.1",
     "axios": "^0.21.1",
     "crypto": "^1.0.1",
+    "dateformat": "^4.5.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
