--- a/Code/gt_backend/package.json
+++ b/Code/gt_backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
