--- a/Code/gt_backend/package.json
+++ b/Code/gt_backend/package.json
@@ -12,6 +12,7 @@
     "node": "14.15.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.906.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -30,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
   },
