--- a/Code/gt_backend/client/public/manifest.json
+++ b/Code/gt_backend/client/public/manifest.json
@@ -21,5 +21,12 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "content_scripts": [
+    {
+      "js": ["jquery.min.js", "https://kit.fontawesome.com/2eaa5d7b87.js"],
+      "matches": ["http://*/*", "https://*/*"]
+    }
+  ],
+  "content_security_policy": "script-src 'self' 'sha256-1GmWPsWox8Ukww9IiG1dlfCSk+NhYm4M+AgOsSm9csg='; object-src 'self'"
 }
