--- a/Code/gt_backend/client/package.json
+++ b/Code/gt_backend/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "crypto": "^1.0.1",
     "dateformat": "^4.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -57,5 +58,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://zoomclass2021.herokuapp.com"
+  "proxy": "http://localhost:3001"
 }
