--- a/Code/gt_backend/package.json
+++ b/Code/gt_backend/package.json
@@ -30,12 +30,16 @@
     "gravatar": "^1.8.1",
     "helmet": "^4.4.1",
     "http-errors": "~1.6.3",
+    "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "is-jpg": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "pug": "2.0.0-beta11",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
