--- a/Code/gt_backend/client/package.json
+++ b/Code/gt_backend/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@syncfusion/ej2-react-schedule": "^19.1.55",
@@ -26,6 +27,8 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^7.0.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
@@ -58,5 +61,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://zoomclass2021.herokuapp.com"
+  "proxy": "http://localhost:3001"
 }
