move meeting to redux store + fix redirect url zoom profile

--- a/Code/gt_backend/client/package.json
+++ b/Code/gt_backend/client/package.json
@@ -61,5 +61,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://zoomclass2021.herokuapp.com"
+  "proxy": "http://localhost:3001"
 }
