--- a/Code/gt_backend/client/package.json
+++ b/Code/gt_backend/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "crypto": "^1.0.1",
     "dateformat": "^4.5.1",
+    "javascript-time-ago": "^2.3.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.1",
